--- a/src/components/socialComponent/socialconnect.css
+++ b/src/components/socialComponent/socialconnect.css
@@ -14,3 +14,14 @@ a.instagram-social{
     color:black;
     
 }
+
+a.youtube-social{
+
+    color:red;
+    
+}
+a.github{
+
+    color:black;
+    
+}
